Fix swagger annotation issue
